Change more things to use Type instead of Class.